# aisim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: architecture-v2.md  architecture.md  module-design.md  roadmap.md  use-cases.md
examples/ollama-client/: CMakeLists.txt  README.md
examples/ollama-client/src/: aisim-core.cppm  aisim-ollama.cppm  aisim.cppm  main.cpp
examples/ollama-client/tests/: json_helpers_test.cpp  simulation_test.cpp
scripts/: install-ollama.sh  ollama-service.sh  setup-gpu.sh
src/: CMakeLists.txt  main.cpp
src/adapter/: CMakeLists.txt  adapter.cppm
src/app/: CMakeLists.txt  composition_root.cppm  main.cpp
src/application/: CMakeLists.txt  application.cppm
src/domain/: CMakeLists.txt  domain.cppm
src/infrastructure/: CMakeLists.txt  composition_root.cppm  concurrency.cppm  logger.cpp  logger.cppm  main.cpp
src/kernel/: CMakeLists.txt  kernel.cppm
src/ui/qt/: README.md
